--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,14 @@
                     <failIfNoTests>true</failIfNoTests>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>3.2.1</version>
+            </plugin>
+
         </plugins>
     </build>
+
 
 </project>
